# AI_Study_assistant

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml
src/: App.jsx
src/client/src/api/: axios.js
src/client/src/components/: ChatWindow.jsx  SourcePanel.jsx  UploadBox.jsx
src/client/src/context/: AuthContext.jsx
src/client/src/pages/: Chat.jsx  Dashboard.jsx  Login.jsx  Register.jsx
src/rag-backend/: embeddings.py  ingest.py  main.py  requirements.txt  retriever.py
src/server/: index.js
src/server/middleware/: auth.js
src/server/models/: Documents.js  Message.js  User.js
src/server/routes/: auth.js  documents.js  rag.js
